chapter_13/network-policy-default-deny.yaml
# kubectl apply -f ./chapter_13/network-policy-default-deny.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector:
